--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,10 @@ services:
   - docker
 
 before_script:
-  - export APP_IMAGE=keboola-component
+  - export APP_IMAGE=keboola-db-extractor-netsuite
   - docker -v
-  - docker build -t $APP_IMAGE .
-  - docker run $APP_IMAGE composer ci
+  - docker-compose build
+  - docker run $APP_IMAGE composer ci-without-tests # no testing account available
 
   # push test image to ECR
   - docker pull quay.io/keboola/developer-portal-cli-v2:latest
