--- a/phpstan.neon
+++ b/phpstan.neon
@@ -3,3 +3,4 @@ parameters:
     ignoreErrors:
         - '#Cannot call method .*\(\) on Symfony\\Component\\Config\\Definition\\Builder\\NodeParentInterface\|null#'
         - '#function odbc_.* expects string, null given.#' # null is allowed
+        - '#function odbc_binmode expects int, resource given.#'
